[project]
name = "visionproj"
version = "0.1.0"
description = "visionproj using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0"
]

[project.scripts]
visionproj = "visionproj.main:run"
run_crew = "visionproj.main:run"
train = "visionproj.main:train"
replay = "visionproj.main:replay"
test = "visionproj.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
